--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-selenium==3.141.0
+selenium~=4.21.0
 urllib3==1.26.7
+pytest~=8.2.2
+jsonpickle~=3.0.4
+PyMySQL~=1.1.1
+pony~=0.7.17
+fixture~=1.5.11
